# projet_systemes_repartis

./: README.md  deploy_script.sh  input_message.txt  machines.txt  pyproject.toml  resultats_amdahl.json  script_master.py  script_master_sequentiel.py
dossierAdeployer/: script_worker.py
